force-app/main/default/objects/CIBE_Divisas__c/CIBE_Divisas__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar la información del TC donde estará disponible cualquier moneda oficial con el tipo de cambio oficial del día.</description>
    <label>Divisa</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Divisas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>