force-app/main/default/objects/CIBE_Divisas__c/fields/CIBE_CodigoDivisa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CodigoDivisa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Divisa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>