force-app/main/default/objects/CIBE_Divisas__c/fields/CIBE_DivisaBase__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DivisaBase__c</fullName>
    <description>Información del valor base de la divisa en TC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Divisa Base</label>
    <length>25</length>
    <type>Text</type>
</CustomField>