force-app/main/default/objects/CIBE_Divisas__c/fields/CIBE_FechaTipoCambio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaTipoCambio__c</fullName>
    <description>Información de la fecha de cambio de valor la divisa</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Tipo de Cambio</label>
    <type>Date</type>
</CustomField>