force-app/main/default/objects/CIBE_Divisas__c/fields/CIBE_NombreDivisa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NombreDivisa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre de la Divisa</label>
    <length>25</length>
    <type>Text</type>
</CustomField>