force-app/main/default/objects/CIBE_Divisas__c/fields/CIBE_TipoCambio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TipoCambio__c</fullName>
    <description>Información del valor del tipo de cambio la divisa en TC</description>
    <label>Tipo de Cambio</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>